log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 03:24:44 PM UTC: 
 tests:  0|6
total_score: 0/70
9304ed5
Thu 30 Mar 2023 03:37:07 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: void value not ignored as it ought to be
   15 |     if(lista == NULL) return exit(EXIT_FAILURE);
      |                              ^~~~~~~~~~~~~~~~~~
Compilation failed
6a1d89f
Thu 30 Mar 2023 03:37:29 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: returning ‘int’ from a function with return type ‘ArrayList *’ {aka ‘struct ArrayList *’} makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     if(lista == NULL) return EXIT_FAILURE;
      |                              ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
16f2374
Thu 30 Mar 2023 03:40:33 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: returning ‘int’ from a function with return type ‘ArrayList *’ {aka ‘struct ArrayList *’} makes pointer from integer without a cast [-Werror=int-conversion]
   15 |     if(lista == NULL) return EXIT_FAILURE;
      |                              ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e65c308
Thu 30 Mar 2023 03:40:58 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:30: error: void value not ignored as it ought to be
   15 |     if(lista == NULL) return exit(EXIT_FAILURE);
      |                              ^~~~~~~~~~~~~~~~~~
Compilation failed
1126e43
Thu 30 Mar 2023 03:41:18 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
94a8a1b
Thu 30 Mar 2023 03:52:10 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d6bb99a
Thu 30 Mar 2023 03:56:38 PM UTC: 
 arraylist.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:40:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘==’ token
   40 |   for(int j == l->size; j>i; j--)
      |             ^~
arraylist.c:40:25: error: ‘j’ undeclared (first use in this function)
   40 |   for(int j == l->size; j>i; j--)
      |                         ^
arraylist.c:40:25: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:40:28: error: expected ‘)’ before ‘;’ token
   40 |   for(int j == l->size; j>i; j--)
      |      ~                     ^
      |                            )
Compilation failed
c5b6917
Thu 30 Mar 2023 03:56:46 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
9f8b4b0
Thu 30 Mar 2023 04:06:40 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
836ddc1
Thu 30 Mar 2023 04:09:59 PM UTC: 
 arraylist.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:54:13: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘==’ token
   54 |   void dato == list->data[i];
      |             ^~
arraylist.c:54:13: error: expected expression before ‘==’ token
arraylist.c:55:21: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   55 |   for(int j = i ; j<size; j++)
      |                     ^~~~
      |                     dysize
arraylist.c:55:21: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:60:10: error: ‘dato’ undeclared (first use in this function)
   60 |   return dato;
      |          ^~~~
arraylist.c:61:1: error: control reaches end of non-void function [-Werror=return-type]
   61 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
92e92ed
Thu 30 Mar 2023 04:10:21 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:54:8: error: variable or field ‘dato’ declared void
   54 |   void dato = list->data[i];
      |        ^~~~
arraylist.c:54:15: error: ‘list’ undeclared (first use in this function)
   54 |   void dato = list->data[i];
      |               ^~~~
arraylist.c:54:15: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:55:21: error: ‘size’ undeclared (first use in this function); did you mean ‘dysize’?
   55 |   for(int j = i ; j<size; j++)
      |                     ^~~~
      |                     dysize
arraylist.c:60:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
   60 |   return dato;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
439359a
